--- a/DNSWatcher/src/Designer.form
+++ b/DNSWatcher/src/Designer.form
@@ -3,17 +3,17 @@
   <grid id="27dc6" binding="jp_total" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="568"/>
+      <xy x="30" y="20" width="490" height="714"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="197ed" binding="jp_top" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="197ed" binding="jp_top" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="400" height="400"/>
-            <maximum-size width="400" height="400"/>
+            <minimum-size width="400" height="300"/>
+            <maximum-size width="400" height="300"/>
           </grid>
         </constraints>
         <properties/>
@@ -35,9 +35,24 @@
               </component>
             </children>
           </scrollpane>
+          <scrollpane id="a379c">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="61fd7" class="javax.swing.JTextPane" binding="FalseHostName">
+                <constraints/>
+                <properties>
+                  <editable value="false"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
-      <grid id="42c99" binding="jp_center" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="42c99" binding="jp_center" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -51,7 +66,7 @@
           <component id="b7ae4" class="javax.swing.JButton" binding="runButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <maximum-size width="200" height="100"/>
+                <maximum-size width="150" height="100"/>
               </grid>
             </constraints>
             <properties>
@@ -64,7 +79,7 @@
           <component id="44f8d" class="javax.swing.JButton" binding="initButton" default-binding="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <maximum-size width="200" height="100"/>
+                <maximum-size width="150" height="100"/>
               </grid>
             </constraints>
             <properties>
@@ -72,13 +87,26 @@
               <text value="init"/>
             </properties>
           </component>
+          <component id="a21c0" class="javax.swing.JButton" binding="lookUpButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <maximum-size width="150" height="100"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="LookUp"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <grid id="a253e" binding="jp_down" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a253e" binding="jp_down" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <maximum-size width="400" height="50"/>
+            <minimum-size width="400" height="100"/>
+            <preferred-size width="400" height="100"/>
+            <maximum-size width="400" height="100"/>
           </grid>
         </constraints>
         <properties/>
@@ -86,7 +114,8 @@
         <children>
           <component id="6c4cf" class="javax.swing.JTextField" binding="restTimeTextField">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="400" height="50"/>
                 <preferred-size width="400" height="50"/>
                 <maximum-size width="400" height="50"/>
               </grid>
@@ -94,6 +123,16 @@
             <properties>
               <editable value="false"/>
               <text value=""/>
+            </properties>
+          </component>
+          <component id="268d2" class="javax.swing.JButton" binding="initialParamButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <hideActionText value="false"/>
+              <text value="Setting"/>
             </properties>
           </component>
         </children>
